fixed mobile spacing issue for job feed error message

--- a/web/app/themes/ppj/src/sass/components/find-a-job.sass
+++ b/web/app/themes/ppj/src/sass/components/find-a-job.sass
@@ -172,9 +172,12 @@
   &__job-feed-message
     border-bottom: $border
     border-top: $border
-    margin: 0 $common-spacing $common-spacing
+    margin: $common-spacing 0
     padding: $common-spacing $common-spacing * 2
     pointer-events: auto
+
+    @include bp('portrait')
+      margin: 0 $common-spacing $common-spacing
 
     &--feed-error
       background-color: $color-warning
